Minor fixes + Trying to load canvas from server
> changed the look of boardsettings
> did a tiny bit of tidy up
> No idea how to get it to work. From what i read we need flask or
cherrypy. It keeps returning internal server error, which means i'm
sending something wrongly.

--- a/www/boardsettings.html
+++ b/www/boardsettings.html
@@ -95,7 +95,7 @@
 	{% endif %}
 	{% for follower in board.followers %}
 	<tr>
-		<td><button class="disabled btn btn-primary">{{ follower }}</button> -&nbsp</td>
+		<td><button class="disabled btn btn-info">{{ follower }}</button> -&nbsp</td>
 		<td>
 			<div class="btn-group">
 				<button class="disabled btn btn-primary">
