--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,7 @@
 	<title>PinnerSpace Home</title>
 	<link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="../bootstrap/css/bootstrap-theme.min.css">
+	<link rel="stylesheet" href="../scripts/colpick/css/colpick.css" type="text/css">
 	<style>
 	table.center {
     	margin-left:auto; 
@@ -52,6 +53,14 @@
   	#myTab, #myTabContent , #editinglocked, #boardButtons, #exitButton, #itext-controls{
   		display: none;
   	}
+
+	.color-box {
+		float:left;
+		width:30px;
+		height:30px;
+		margin:5px;
+		border: 1px solid gray;
+	}
 
   	input[type=range] {
   		width: 50px;
@@ -119,7 +128,7 @@
 					{% endif %}
 				</div>
 				</p>
-				
+				<span>aaa</span><div class="color-box"></div>
 				<!--BREAK--><hr>
 
 				<!--TO BE FILLED-->
@@ -333,6 +342,7 @@
 	<script src="../scripts/jquery.tools.min.js" type="text/javascript"></script>
 	<script src="../scripts/jquery-ui-1.10.4.custom.min.js" type="text/javascript"></script>
 	<script src="../scripts/tinycolor.js" type="text/javascript"></script>
+	<script src="../scripts/colpick/js/colpick.js" type="text/javascript"></script>
 	<!--Canvas Script--> <!--Maybe should move to another file? When it's more or less done?-->
 	<script type = "text/javascript">
 
@@ -349,6 +359,18 @@
 	if (window.location.href.indexOf('#_=_') > 0) {
     	window.location = window.location.href.replace(/#.*/, '');
 	}
+	$('.color-box').colpick({
+		colorScheme:'dark',
+		layout:'hex',
+		submit:0,
+		color:'aabbcc',
+		onChange:function(hsb,hex,rgb,el,bySetColor) {
+			$(el).css('background-color','#'+hex);
+			// Fill the text box just if the color was set using the picker, and not the colpickSetColor function.
+			if(!bySetColor) $(el).val(hex);
+		}
+	})
+	.css('background-color', '#aabbcc');
 
 	/************************ GLOBAL VARIABLES *************************/
 	var canvas;
@@ -718,6 +740,7 @@
   		else {
   			return;
   		}
+  		console.log(canvas);
   		isSaved = false;
   	}
   	function delActive() {
@@ -749,6 +772,7 @@
   			top: currGrp.top,
   			angle: currGrp.angle,
   		};
+  		console.log(canvas);
   		// Save items to add/remove in two arrays
   		var grpItems = [];		// Clones of items
   		var toRemove = [];		// Actual items
@@ -756,8 +780,11 @@
   		// (Largest index = top object in canvas | Currently an n*m algo; I don't see a workaround.)
   		for(var i=0; i<canvas._objects.length; i++){
   			var temp = canvas.item(i);
+  			console.log(temp);
   			if(currGrp.contains(temp)){
+  				console.log(temp.clone());
   				grpItems.push(temp.clone());		// Last object in grpItems is top item
+  				console.log(grpItems);
   				toRemove.push(temp);				// Save the items to remove (no concurrent removal)
   			}
   		}
@@ -767,6 +794,7 @@
   		}
 		canvas.discardActiveGroup();
 		// Add group onto canvas
+		console.log(grpItems);
 		var newGrp = new fabric.Group(grpItems);
 		canvas.add(newGrp);
 		setDefSettings(newGrp);
