Added error message for background image.
> Shows error when unable to preload background image

--- a/www/index.html
+++ b/www/index.html
@@ -53,7 +53,7 @@
     	border:1px solid #3B5998;
     	background-color:#fff;
   	}
-  	#noPreview {
+  	#noPreview, #bgnoPreview {
   		display:none;
   	}
 
@@ -361,6 +361,7 @@
 								<p><input type="text" id="bgimageurl" onblur="bgpreloadImage()"size="35" placeholder="Custom Background Image Url"></p>
 								<button onclick="changeBGImg()">Change Background</button>
 								<hr>
+								<p id="bgnoPreview">No preview available<p>
 								</center>
 							</div>
 						</div>
